<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:textAlignment="center"
        style="@style/Titre"
        android:text="@string/titre_modifier"/>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:text="@string/creation_prenom"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_gravity="end"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modification_prenom"
            android:textSize="20sp"
            android:inputType="text"
            android:layout_marginHorizontal="20dp" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/creation_nom"
            android:textSize="20sp"
            android:layout_gravity="end" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/modification_nom"
            android:textSize="20sp"
            android:inputType="text"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="end"
            android:text="@string/creation_favori"
            android:textSize="20sp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/modification_favori"
            android:layout_gravity="start|center"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:paddingVertical="20dp"
            android:text="@string/creation_mail"
            android:textSize="20sp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/modification_mail"
            android:layout_marginHorizontal="20dp"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:paddingVertical="20dp"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_gravity="end"
            android:text="@string/creation_tel"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modification_tel"
            android:layout_marginHorizontal="20dp"
            android:digits="0123456789."
            android:inputType="number"
            android:textSize="20sp" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:paddingVertical="20dp"
            android:textSize="20sp"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:text="@string/creation_ville"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:id="@+id/modification_ville"
            android:layout_marginHorizontal="20dp"
            android:inputType="text"
            android:textSize="20sp" />
    </TableRow>
    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:paddingVertical="20dp"
            android:textSize="20sp"
            android:id="@+id/bouton_photo_modification"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:text="@string/photo"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:id="@+id/modification_photo"
            android:layout_marginHorizontal="20dp"
            android:inputType="text"
            android:textSize="20sp"
            android:hint="@string/edit_photo"/>
    </TableRow>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:textSize="20sp"
        android:id="@+id/bouton_modification"
        android:text="@string/bouton_modification"/>
</TableLayout>