<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/detail_photo"
        android:layout_weight="1"
        android:contentDescription="@string/description_photo"
        android:adjustViewBounds="true" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TableRow
            android:weightSum="5">
            <TextView
                android:layout_weight="2.25"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/normal_size"
                android:layout_marginHorizontal="@dimen/normal_margin"
                android:layout_marginVertical="@dimen/normal_margin"
                android:id="@+id/detail_nom"
                android:ellipsize="end"
                android:singleLine="true" />
            <TextView
                android:layout_weight="3.75"
                android:layout_width="0dp"
                android:textSize="@dimen/normal_size"
                android:singleLine="true"
                android:layout_marginVertical="@dimen/normal_margin"
                android:layout_marginHorizontal="@dimen/normal_margin"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:id="@+id/detail_prenom" />
        </TableRow>
        <TableRow
            android:weightSum="5">
            <TextView
                android:layout_weight="2.25"
                android:layout_width="0dp"
                android:layout_marginVertical="@dimen/normal_margin"
                android:layout_marginHorizontal="@dimen/normal_margin"
                android:textSize="@dimen/normal_size"
                android:id="@+id/detail_tel"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_height="match_parent" />
            <TextView
                android:layout_weight="2.25"
                android:layout_width="0dp"
                android:layout_marginVertical="@dimen/normal_margin"
                android:maxLines="2"
                android:layout_marginHorizontal="@dimen/normal_margin"
                android:textSize="@dimen/normal_size"
                android:id="@+id/detail_ville"
                android:layout_height="match_parent" />
            <ImageView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_marginVertical="@dimen/normal_margin"
                android:layout_marginHorizontal="@dimen/normal_margin"
                android:id="@+id/detail_favori"
                android:contentDescription="@string/description_favori"
                android:adjustViewBounds="true"
                android:layout_height="match_parent"
                android:src="@drawable/etoile"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="2"
                android:textSize="@dimen/normal_size"
                android:ellipsize="end"
                android:layout_marginHorizontal="@dimen/normal_margin"
                android:layout_marginVertical="@dimen/normal_margin"
                android:id="@+id/detail_mail" />
        </TableRow>
        <TableRow
            android:weightSum="2">
            <Button
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_marginVertical="@dimen/normal_margin"
                android:layout_marginHorizontal="@dimen/normal_margin"
                android:id="@+id/bouton_envoyer_sms"
                android:textSize="@dimen/normal_size"
                android:text="@string/detail_bouton_sms"/>
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/normal_size"
                android:text="@string/detail_bouton_mail"
                android:layout_marginVertical="@dimen/normal_margin"
                android:layout_marginHorizontal="@dimen/normal_margin"
                android:id="@+id/bouton_envoyer_mail"/>
        </TableRow>
    </TableLayout>
</LinearLayout>